--- a/templates/calc.html
+++ b/templates/calc.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Calculations</title>
     <style>
       #text,
       #content {
@@ -81,7 +81,7 @@
   />
   <body>
     <img
-      src="https://www.temi.com/blog/wp-content/uploads/2017/10/rev-pastpresentfuture.gif"
+      src="{{url_for('static', filename='speech.png')}}"
       alt="image"
       style="
         display: block;
@@ -96,6 +96,7 @@
       <h3>Speech Analysis Result</h3>
       <h1>Points: {{ data["points"] }}</h1>
       <h1>Percentage: {{ data["percentage"] }}%</h1>
+      <h1>Incorrect words: {{ data["missing"] }}</h1>
     </div>
     <script src="{{url_for('static', filename='app.js')}}"></script>
   </body>
